<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">WonderPush InApp Demo</string>

    <string name="mnuMainReadInstallationCustom">Get install custom</string>
    <string name="mnuMainOpenChildActivity">Child activity</string>
    <string name="mnuMainToggleNotificationEnabled">Enable notifications</string>
    <string name="mnuMainSetUserId">Set user id</string>
    <string name="noMockLocationAlertTitle">Cannot simulate mock locations</string>
    <string name="noMockLocationAlertMessage">In order to simulate geographical event, please do:\n- Settings > Applications > Development\n- Check Allow mock locations</string>
    <string name="noMockLocationAlertOkButton">OK</string>

    <string name="initializing">CONNECTING TO WONDERPUSH&#8230;</string>
    <string name="description">SIMULATE AN EVENT BELOW</string>

    <string name="btnFirstVisit" translatable="false">FIRST VISIT</string>
    <string name="btnNewsRead" translatable="false">NEWS READ</string>
    <string name="btnGameOver" translatable="false">GAME OVER</string>
    <string name="btnLike" translatable="false">LIKE</string>
    <string name="btnAddToCart" translatable="false">ADD TO CART</string>
    <string name="btnPurchase" translatable="false">PURCHASE</string>
    <string name="btnNearEiffelTower" translatable="false">NEAR EIFFEL TWR.</string>
    <string name="btnNearLouvre" translatable="false">NEAR LOUVRE</string>
    <string name="btnInactiveUser" translatable="false">INACTIVE USER</string>

    <string name="title_activity_child">Child activity</string>
    <string name="lblChildActivity">Child activity</string>

    <string name="title_activity_navigation">Navigation</string>
    <string name="txtNavigationText">Loading incoming intent&#8230;</string>

    <string name="titleMainSetUserIdDialog">Enter new user id:</string>
    <string name="btnMainSetUserIdDialogOK">OK</string>
    <string name="btnMainSetUserIdDialogCancel">Cancel</string>

    <string name="title_activity_tree_a1">Tree A1</string>
    <string name="title_activity_tree_a1_b1">Tree A1 B1</string>
    <string name="title_activity_tree_a1_b2">Tree A1 B2</string>
    <string name="title_activity_tree_a2">Tree A2</string>
    <string name="title_activity_tree_a2_b1">Tree A2 B1</string>
    <string name="title_activity_tree_a2_b2">Tree A2 B2</string>
    <string name="title_activity_orphan">Orphan</string>
    <string name="mnuMainOpenTreeA1Activity">Tree A1 activity</string>
    <string name="mnuMainOpenTreeA2Activity">Tree A2 activity</string>
    <string name="mnuMainOpenOrphanActivity">Orphan activity</string>
    <string name="mnuMainPreferences">Preferences&#8230;</string>

    <string name="title_activity_preferences">Preferences</string>

</resources>
