<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wonderpush.demo.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/initializing" />

    <Button
        android:id="@+id/btnFirstVisit"
        style="@style/BigButton.A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnFirstVisit_onClick"
        android:text="@string/btnFirstVisit" />

    <Button
        android:id="@+id/btnNewsRead"
        style="@style/BigButton.B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnNewsRead_onClick"
        android:text="@string/btnNewsRead" />

    <Button
        android:id="@+id/btnGameOver"
        style="@style/BigButton.C"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnGameOver_onClick"
        android:text="@string/btnGameOver" />

    <Button
        android:id="@+id/btnLike"
        style="@style/BigButton.D"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnLike_onClick"
        android:text="@string/btnLike" />

    <Button
        android:id="@+id/btnAddToCart"
        style="@style/BigButton.E"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnAddToCart_onClick"
        android:text="@string/btnAddToCart" />

    <Button
        android:id="@+id/btnPurchase"
        style="@style/BigButton.F"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnPurchase_onClick"
        android:text="@string/btnPurchase" />

    <Button
        android:id="@+id/btnNearEiffelTower"
        style="@style/BigButton.G"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnNearEiffelTower_onClick"
        android:text="@string/btnNearEiffelTower" />

    <Button
        android:id="@+id/btnNearLouvre"
        style="@style/BigButton.H"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnNearLouvre_onClick"
        android:text="@string/btnNearLouvre" />

    <Button
        android:id="@+id/btnInactiveUser"
        style="@style/BigButton.I"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnInactiveUser_onClick"
        android:text="@string/btnInactiveUser" />

    <Button
        android:id="@+id/btnSexMale"
        style="@style/BigButton.I"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnGenderMale_onClick"
        android:text="GENDER: MALE" />

    <Button
        android:id="@+id/btnSexFemale"
        style="@style/BigButton.I"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnGenderFemale_onClick"
        android:text="GENDER: FEMALE" />

    <Button
        android:id="@+id/btnSexBoth"
        style="@style/BigButton.I"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnGenderBoth_onClick"
        android:text="GENDER: [MALE, FEMALE]" />

    <Button
        android:id="@+id/btnSexRemove"
        style="@style/BigButton.I"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnGenderRemove_onClick"
        android:text="GENDER: null" />

  </LinearLayout>

</ScrollView>
